Improve accessibility string of expand button.

In MD notification, expand button had accessibility strings
"Maximize"/"Minimize", but dedicated strings that describe exactly what
the button do are better in terms of the usability from screen reader.

The accessibility string was added in the CL: https://crrev.com/c/612962

TEST=manual
BUG=755855

Change-Id: I8fc4bc15d4db60e5439b41a23c198f4532de29ed
Reviewed-on: https://chromium-review.googlesource.com/618072
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495429}
Former-commit-id: 829feacbdd06530940851d5baf3f2f7422b0aebc